apps/neuvector/aat/00/neuvector-redirect.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: neuvector-neuvectorredirect@kubernetescrd
  name: neuvector-redirect-ingress
  namespace: neuvector
spec:
  rules:
    - host: cft-neuvector00.aat.platform.hmcts.net
      http:
        paths:
          - backend:
              service:
                name: neuvector-service-webui
                port:
                  number: 8443
            path: /
            pathType: ImplementationSpecific
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: neuvectorredirect
  namespace: neuvector
spec:
  redirectRegex:
    permanent: true
    regex: ^http://cft-neuvector00.aat.platform.hmcts.net/(.*)
    replacement: https://cft-neuvector00.aat.platform.hmcts.net/$1
